# NewCairoTechnologicalUniversityDesktopApp.

./: CMakeLists.txt  DATABASE_EXPANSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TODO_MISSING_FEATURES.md
.cache/clangd/index/: App.cpp.7C139E6080D91E55.idx  App.hpp.792705EB93FC1F0B.idx  AuditLog.hpp.543600BFB987F67B.idx  AuditLogRepository.cpp.399AB6840E805B47.idx  AuditLogRepository.hpp.2097DDB90E4CCD92.idx  AuthService.cpp.4FA4D821A1327BDF.idx  AuthService.hpp.4E09B047FB8DFBF6.idx  Button.cpp.F9F8D06A5C26E834.idx  Button.hpp.1F0282FABFF45AEE.idx  Course.hpp.8D24FDB92862D168.idx  CourseListScreen.cpp.311337742F6C20A7.idx  CourseListScreen.hpp.2A9977802D76A95E.idx  CourseRepository.cpp.2625109075B99BD6.idx  CourseRepository.hpp.3008E6E381FF42E5.idx  CourseService.cpp.8E8765DA7CCEDC33.idx  CourseService.hpp.09521B8BB4AAF00D.idx  Database.cpp.623714BDA690DC77.idx  Database.hpp.C92D559039BAB3DC.idx  Enrollment.hpp.07E0450FF806697C.idx  EnrollmentRepository.cpp.D4598347FB533036.idx  EnrollmentRepository.hpp.B1FAFFBC8104E04E.idx  EnrollmentService.cpp.E508EA85FBA351EC.idx  EnrollmentService.hpp.86876704E18A890C.idx  GradeComponent.hpp.AD6E130AA3F27471.idx  GradeComponentRepository.cpp.9ED3F58EBBD7D358.idx  GradeComponentRepository.hpp.70F06B3F95DA2090.idx  LoginScreen.cpp.3EC53CB50BEE74FD.idx  LoginScreen.hpp.3276DE27BE7D9EA0.idx  MainMenuScreen.cpp.FDD9FADFB3B666C2.idx  MainMenuScreen.hpp.DA5AA3B102A4C67E.idx  PMDRecord.hpp.35970E5BCA9B8B9B.idx  PmdRepository.cpp.A1D4508574DFF566.idx  PmdRepository.hpp.852425C20D50A61A.idx  PmdService.cpp.4C4D0B6AC0CA021C.idx  (+35 more)
src/: main.cpp
src/app/: App.cpp  App.hpp
src/core/: Database.cpp  Database.hpp
src/ui/: Screen.hpp  ScreenType.hpp
(+69 files in other folders)
